<?xml version="1.0" encoding="UTF-8"?>
<!--

       Copyright 2009-2022 the original author or authors.

       Licensed under the Apache License, Version 2.0 (the "License");
       you may not use this file except in compliance with the License.
       You may obtain a copy of the License at

          https://www.apache.org/licenses/LICENSE-2.0

       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.mybatis</groupId>
    <artifactId>mybatis-parent</artifactId>
    <version>36</version>
    <relativePath />
  </parent>

  <artifactId>mybatis</artifactId>
  <version>3.5.12-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>mybatis</name>
  <description>
    The MyBatis SQL mapper framework makes it easier to use a relational database with object-oriented
    applications. MyBatis couples objects with stored procedures or SQL statements using a XML descriptor or
    annotations. Simplicity is the biggest advantage of the MyBatis data mapper over object relational mapping
    tools.
  </description>
  <url>https://www.mybatis.org/mybatis-3</url>

  <inceptionYear>2009</inceptionYear>

  <contributors>
    <contributor>
      <name>Adam Gent</name>
      <email>adam.gent@evocatus.com</email>
    </contributor>
    <contributor>
      <name>Andrea Selva</name>
      <email>selva.andre@gmail.com</email>
    </contributor>
    <contributor>
      <name>Antonio Sánchez</name>
      <email>juntandolineas@gmail.com</email>
    </contributor>
    <contributor>
      <name>Arkadi Shishlov</name>
      <email>arkadi.shishlov@gmail.com</email>
    </contributor>
    <contributor>
      <name>Axel Doerfler</name>
      <email>axel.doerfler@gmail.com</email>
    </contributor>
    <contributor>
      <name>Chris Dadej</name>
      <email>chris.dadej@gmail.com</email>
    </contributor>
    <contributor>
      <name>Denis Vygovskiy</name>
      <email>qizant@gmail.com</email>
    </contributor>
    <contributor>
      <name>Franta Mejta</name>
      <email>mejta@rewor.cz</email>
    </contributor>
    <contributor>
      <name>Jurriaan Pruys</name>
      <email>jurriaan@pruys.com</email>
    </contributor>
    <contributor>
      <name>Keith Wong</name>
      <email>wongkwl@gmail.com</email>
    </contributor>
    <contributor>
      <name>Lasse Voss</name>
      <email>lasse.voss@motor-talk-gmbh.de</email>
    </contributor>
    <contributor>
      <name>Luke Stevens</name>
      <email>nosuchluke@gmail.com</email>
    </contributor>
    <contributor>
      <name>Paul Krause</name>
      <email>paulkrause88@alum.mit.edu</email>
    </contributor>
    <contributor>
      <name>Peter Leibiger</name>
      <email>kuhnroyal@gmail.com</email>
    </contributor>
    <contributor>
      <name>Riccardo Cossu</name>
      <email>riccardo.cossu@gmail.com</email>
    </contributor>
    <contributor>
      <name>Tomáš Neuberg</name>
      <email>neuberg@m-atelier.cz</email>
    </contributor>
  </contributors>

  <scm>
    <url>https://github.com/mybatis/mybatis-3</url>
    <connection>scm:git:ssh://github.com/mybatis/mybatis-3.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/mybatis/mybatis-3.git</developerConnection>
    <tag>HEAD</tag>
  </scm>
  <issueManagement>
    <system>GitHub Issue Management</system>
    <url>https://github.com/mybatis/mybatis-3/issues</url>
  </issueManagement>
  <ciManagement>
    <system>Github</system>
    <url>https://github.com/mybatis/mybatis-3/actions</url>
  </ciManagement>
  <distributionManagement>
    <site>
      <id>gh-pages</id>
      <name>Mybatis GitHub Pages</name>
      <url>git:ssh://git@github.com/mybatis/mybatis-3.git?gh-pages#</url>
    </site>
  </distributionManagement>

  <properties>
    <clirr.comparisonVersion>3.4.6</clirr.comparisonVersion>
    <excludedGroups>TestcontainersTests</excludedGroups>
    <maven.compiler.testCompilerArgument>-parameters</maven.compiler.testCompilerArgument>
    <module.name>org.mybatis</module.name>
    <osgi.export>org.apache.ibatis.*;version=${project.version};-noimport:=true</osgi.export>
    <osgi.import>*;resolution:=optional</osgi.import>
    <osgi.dynamicImport>*</osgi.dynamicImport>
    <spotbugs.onlyAnalyze>org.apache.ibatis.*</spotbugs.onlyAnalyze>
    <argLine>-Djdk.attach.allowAttachSelf -Xmx2048m</argLine>

    <!-- Reproducible Builds -->
    <project.build.outputTimestamp>1663532792</project.build.outputTimestamp>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.24</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.alibaba</groupId>
      <artifactId>druid</artifactId>
      <version>1.1.10</version>
    </dependency>

    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.29</version>
    </dependency>

    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>30.0-jre</version>
    </dependency>
    <dependency>
      <groupId>org.reflections</groupId>
      <artifactId>reflections</artifactId>
      <version>0.10.2</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <testCompilerArgument>${maven.compiler.testCompilerArgument}</testCompilerArgument>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <systemProperties>
            <property>
              <name>derby.stream.error.file</name>
              <value>${project.build.directory}/derby.log</value>
            </property>
            <property>
              <name>derby.system.home</name>
              <value>${project.build.directory}</value>
            </property>
          </systemProperties>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pdf-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <createDependencyReducedPom>false</createDependencyReducedPom>
              <artifactSet>
                <includes>
                  <include>org.mybatis:mybatis</include>
                  <include>ognl:ognl</include>
                  <include>org.javassist:javassist</include>
                </includes>
              </artifactSet>
              <relocations>
                <relocation>
                  <pattern>ognl</pattern>
                  <shadedPattern>org.apache.ibatis.ognl</shadedPattern>
                </relocation>
                <relocation>
                  <pattern>javassist</pattern>
                  <shadedPattern>org.apache.ibatis.javassist</shadedPattern>
                </relocation>
              </relocations>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <configuration>
          <locales>en,es,ja,fr,zh_CN,ko</locales>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>org.apache.ibatis.ognl.*</exclude>
            <exclude>org.apache.ibatis.javassist.*</exclude>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <!-- Run slow tests only on github ci, to force run otherwise use -D"env.GITHUB" -->
      <id>github-ci</id>
      <activation>
        <property>
          <name>env.GITHUB</name>
        </property>
      </activation>
      <properties>
        <excludedGroups />
      </properties>
    </profile>
    <profile>
      <id>pre16</id>
      <activation>
        <jdk>(,16)</jdk>
      </activation>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <configuration>
                <testExcludes>
                  <testExclude>**/record_type/*.java</testExclude>
                </testExcludes>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>
    <profile>
      <id>16</id>
      <activation>
        <jdk>[16,)</jdk>
      </activation>
      <properties>
        <java.version>16</java.version>
        <java.release.version>16</java.release.version>
        <java.test.version>16</java.test.version>
        <java.test.release.version>16</java.test.release.version>
        <excludedGroups>TestcontainersTests,RequireIllegalAccess</excludedGroups>
      </properties>
    </profile>
  </profiles>

</project>
